--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -26,6 +26,10 @@
   text-decoration: none;
 }
 
+.datetime{
+  margin-top: 1rem;
+}
+
 .title {
   font-size: 1.3rem;
   color: #a9a9a9;
@@ -34,3 +38,4 @@
   border-radius: 1rem;
   text-align: center;
 }
+
