--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -7,7 +7,7 @@
 <ion-content>
   <ion-card>
     <ion-card-header>
-      <ion-title class="title">Iniciar Sesion</ion-title>
+      <ion-title class="title">Iniciar <br> Sesion</ion-title>
     </ion-card-header>
     <ion-card-content>
       <ion-item lines="full">
@@ -17,7 +17,7 @@
       </ion-item>
       <ion-item lines="full">
         <!-- Usamos ngModel para indicarle al input el objeto a utilizar-->
-        <ion-label position="floating">Password</ion-label>
+        <ion-label position="floating">Contraseña</ion-label>
         <ion-input type="password" [(ngModel)]="user.password" minlength="4" maxlength="4"></ion-input>
       </ion-item>
       <ion-row>
