--- a/src/app/pages/resetpassword/resetpassword.page.html
+++ b/src/app/pages/resetpassword/resetpassword.page.html
@@ -6,18 +6,18 @@
 <ion-content>
   <ion-card>
     <ion-card-header>
-      <ion-title class="title">Reestablecer Contraseña</ion-title>
+      <ion-title class="title">Reestablecer <br> Contraseña</ion-title>
     </ion-card-header>
     <ion-card-content>
       <ion-item lines="full">
         <ion-label position="floating">Usuario</ion-label>
         <!-- Usamos ngModel para indicarle al input el objeto a utilizar-->
-        <ion-input type="text" minlength="3" maxlength="8"></ion-input>
+        <ion-input type="text" minlength="3" maxlength="8" [(ngModel)]="user"></ion-input>
       </ion-item>
       <ion-row>
         <ion-col>
           <!-- Indicamos mediante el (click) la funcion a quien referenciara-->
-          <ion-button expand="full" (click)="presentToast('Se ha enviado un correo para reestablecer su contraseña')" >Enviar</ion-button>
+          <ion-button expand="full" (click)="mostrarMensaje()" >Enviar</ion-button>
         </ion-col>
       </ion-row>
     </ion-card-content>
