--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -12,7 +12,7 @@
 <ion-content [fullscreen]="true">  
   <ion-title class="ion-padding-top ion-text-center">
     <ion-label>
-      <h1 class="title">Bienvenido <br> {{user.usuario}}</h1>
+      <h1 class="title animacion1" #animacion1>Bienvenido <br> {{user.usuario}}</h1>
     </ion-label>
   </ion-title>
 
