--- a/src/app/pages/resetpassword/resetpassword.page.html
+++ b/src/app/pages/resetpassword/resetpassword.page.html
@@ -17,7 +17,7 @@
       <ion-row>
         <ion-col>
           <!-- Indicamos mediante el (click) la funcion a quien referenciara-->
-          <ion-button expand="full" (click)="mostrarMensaje()" >Enviar</ion-button>
+          <ion-button expand="full" (click)="mostrarMensaje()" >Recuperar</ion-button>
         </ion-col>
       </ion-row>
     </ion-card-content>
