--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,23 +1,131 @@
-ion-content{
+ion-content {
     --padding-top: 20px;
     --padding-bottom: 20px;
     --padding-end: 20px;
     --padding-start: 20px;
+    --background: #000;
 }
-ion-item{
+
+ion-item {
     --padding-bottom: 10px;
 }
-
-.reestablecerContrasena {
-    font-size: .6rem;
-}
-
-.title {
-    font-size: 1.3rem;
-    color: #a9a9a9;
-    background-color: #410041;
-    padding: 1rem;
-    border-radius: 1rem;
+ion-toolbar {
+    --background: #000;
+    display: flex;
     text-align: center;
-    display: block;
 }
+
+span {
+    color: #000;
+    background-color: #F57F17;
+    padding: .5rem;
+    border-radius: 1rem;
+}
+
+.card {
+    --background: #000000; // Color Background Card
+    box-shadow: .3rem .1rem .3rem .3rem #F57F17; // Color Sombra
+    border-radius: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    height: 90%;
+}
+
+.headerCard.ios {
+    margin: 1rem 1rem;
+    width: 90%;
+    height: 4.5rem;
+}
+
+.headerCard {
+
+    font-size: 1.3rem;
+    font-weight: 800;
+    color: #fff;
+    background-color: #000000; // Color Titulo
+    border-radius: 1rem;
+    padding: .5rem;
+    text-align: center;
+    border: .2rem solid #fff; // Color Borde Boton
+}
+
+
+
+.inputItem {
+    margin: 2rem 0;
+    --background:transparent;
+}
+.inputItem.ios {
+    top: 2.5rem;
+    margin-top: 2rem;
+    --background:transparent;
+}
+
+/************ BOTONES ************/
+.btn {
+    margin-top: 2rem;
+    position: relative;
+    display: block;
+    height: 3rem;
+    width: 10rem;
+    border-radius: 4px;
+    text-transform: uppercase;
+    background-color: transparent; // Color Background Boton
+    color: #fff;
+    font-size: 1rem;
+    overflow: hidden;
+    transition: all 500ms ease;
+    border: 2px solid #F57F17; // Color Borde Boton
+    z-index: 0;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.btn.ios {
+    margin-top: 1.5rem;
+}
+
+
+.btn::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    margin: auto;
+    background-color: #FFD600;
+    --background: rgba(0, 0, 0, 1);
+    transition: all 500ms ease;
+    z-index: -1;
+}
+
+.btn::before {
+    left: -520px;
+    right: 0;
+    width: 100%;
+    height: 150%;
+    transition: all 750ms ease;
+    transform: rotate(45deg);
+    box-shadow: 0 0 10px #FFD600, 0 0 20px #FFD600, 0 0 20px #FFD600;
+}
+
+.btn:hover::before {
+    left: 520px;
+}
+
+.btnIon, .btnIon:host{
+    width: auto;
+    height: 3rem;
+    font-size: .7rem;
+    font-weight: 300;
+    --background: transparent;
+    --background-hover: transparent;
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+
+
+
+/************ END BOTONES ************/
+
