--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,3 +1,7 @@
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Krub:wght@600&family=Nunito:ital,wght@0,300;1,400&display=swap" rel="stylesheet">
+
 <ion-header>
   <ion-toolbar>
     <ion-title>Registr<span>App</span></ion-title>
@@ -7,7 +11,7 @@
 <ion-content>
   <ion-card class="card">
     <ion-card-header>
-      <ion-title class="headerCard">Iniciar <span>Sesion</span> </ion-title>
+      <ion-title class="headerCard">Iniciar Sesion </ion-title>
     </ion-card-header>
     <ion-card-content>
       <ion-item lines="full" class="inputItem">
