--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -29,8 +29,9 @@
           <ion-button class="btn btnIon" (click)="resetPassword()">Reestablecer Contraseña
           </ion-button>
         </ion-col>
+      </ion-row>
+      <ion-row>
         <ion-col>
-
           <ion-button class="btn btnIon" (click)="login()">Ingresar</ion-button>
         </ion-col>
       </ion-row>
