--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -7,7 +7,6 @@
     <ion-title>Registr<span>App</span></ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
   <ion-card class="card">
     <ion-card-header>
@@ -29,15 +28,14 @@
           <ion-button class="btn btnIon" (click)="resetPassword()">Reestablecer Contraseña
           </ion-button>
         </ion-col>
+      </ion-row>
+      <ion-row>
         <ion-col>
-
           <ion-button class="btn btnIon" (click)="login()">Ingresar</ion-button>
         </ion-col>
       </ion-row>
     </ion-card-content>
-
   </ion-card>
-  
 </ion-content>
 
 
