--- a/src/app/pages/resetpassword/resetpassword.page.html
+++ b/src/app/pages/resetpassword/resetpassword.page.html
@@ -1,23 +1,29 @@
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Krub:wght@600&family=Nunito:ital,wght@0,300;1,400&display=swap" rel="stylesheet">
 <ion-header>
   <ion-toolbar>
-    <ion-title>Reset Password</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/login"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Registr<span>App</span></ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-card>
+  <ion-card class="card">
     <ion-card-header>
-      <ion-title class="title">Reestablecer <br> Contraseña</ion-title>
+      <ion-title class="headerCard">Reestablecer Contraseña</ion-title>
     </ion-card-header>
     <ion-card-content>
-      <ion-item lines="full">
+      <ion-item lines="full" class="inputItem">
         <ion-label position="floating">Usuario</ion-label>
-        <!-- Usamos ngModel para indicarle al input el objeto a utilizar-->
-        <ion-input type="text" minlength="3" maxlength="20" [(ngModel)]="user"></ion-input>
+        
+        <ion-input type="text" [(ngModel)]="user.usuario" minlength="4" maxlength="20"></ion-input>
       </ion-item>
       <ion-row>
         <ion-col>
-          <!-- Indicamos mediante el (click) la funcion a quien referenciara-->
-          <ion-button expand="full" (click)="mostrarMensaje()" >Recuperar</ion-button>
+          <ion-button class="btn btnIon" (click)="mostrarMensaje()">Reestablecer Contraseña
+          </ion-button>
         </ion-col>
       </ion-row>
     </ion-card-content>
