--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -7,45 +7,31 @@
     <ion-title>Registr<span>App</span></ion-title>
   </ion-toolbar>
 </ion-header>
-<!-- Termina el Header -->
 
-<!-- Comienza el Content -->
-<ion-content [fullscreen]="true">
-  <ion-card class="card">
+<ion-content [fullscreen]="true" [style.visibility]="content_visibility">
+
+  <ion-card class="ion-text-center">
     <ion-card-header>
-      <ion-card-title class="headerCard">Bienvenido <br> {{user.usuario}}</ion-card-title>
+      <ion-card-title class="headerCard">Bienvenido</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <ion-row class="justify-center">
-        <img src="../../../assets/img/RegistrAppQr.png" alt="QR" class="imgQr">
-      </ion-row>
-      <ion-row class="justify-center">
-        <ion-button class="btn btnIon">Abrir Camara</ion-button>
-      </ion-row>
+      <qrcode 
+        [qrdata]="qrCodeString"
+        [width]="256" 
+        [errorCorrectionLevel]="'M'">
+      </qrcode>
     </ion-card-content>
   </ion-card>
 
-  <ion-tabs>
-    <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="schedule">
-        <ion-icon name="camera"></ion-icon>
-        <ion-label>Camara</ion-label>
-      </ion-tab-button>
+  <ion-button 
+    expand="block" 
+    class="ion-margin btn btnIon" 
+    (click)="startScan()">
+    Scan QR Code
+  </ion-button>
+
+  <ion-item *ngIf="scannedResult">
+    <ion-label class="ion-text-wrap">Scanned Result: {{scannedResult}}</ion-label>
+  </ion-item>
   
-      <ion-tab-button tab="Perfil">
-        <ion-icon name="person-circle"></ion-icon>
-        <ion-label>Perfil</ion-label>
-      </ion-tab-button>
-
-    </ion-tab-bar>
-  </ion-tabs>
-
-  <!-- <ion-datetime-button class="datetime" datetime="datetime"></ion-datetime-button>
-
-  <ion-modal [keepContentsMounted]="true">
-    <ng-template>
-      <ion-datetime id="datetime"></ion-datetime>
-    </ng-template>
-  </ion-modal>
-</ion-content> -->
-  <!-- Termina el Content -->
+</ion-content>
