--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -16,12 +16,12 @@
       <ion-item lines="full" class="inputItem">
         <ion-label position="floating">Usuario</ion-label>
         
-        <ion-input type="text" [(ngModel)]="user.usuario" minlength="4" maxlength="20"></ion-input>
+        <ion-input type="text" [(ngModel)]="usuario" minlength="4" maxlength="20"></ion-input>
       </ion-item>
       <ion-item lines="full" class="inputItem">
         
         <ion-label position="floating">Contraseña</ion-label>
-        <ion-input type="password" [(ngModel)]="user.password" minlength="4" maxlength="20"></ion-input>
+        <ion-input type="password" [(ngModel)]="password" minlength="4" maxlength="20"></ion-input>
       </ion-item>
       <ion-row>
         <ion-col>
