--- a/src/app/pages/assists/assists.page.html
+++ b/src/app/pages/assists/assists.page.html
@@ -4,4 +4,47 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
+  <ion-card class="ion-text-center">
+    <ion-card-header>
+      <ion-card-title class="headerCard">Asignaturas</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+
+      <ion-list>
+
+        <ion-item *ngFor="let c of courses">
+          <ion-row>
+            <ion-col>
+              <ion-label>{{c.name}}</ion-label>
+            </ion-col>
+            <ion-fab-button (click)="editar(c)">
+              <ion-icon name="pencil"></ion-icon>
+            </ion-fab-button>
+  
+            <ion-fab-button (click)="eliminar(c)">
+              <ion-icon name="trash"></ion-icon>
+            </ion-fab-button>
+          </ion-row>
+          <ion-row>
+            <ion-label>Asistencia: {{c.assists}}</ion-label>
+          </ion-row>
+        </ion-item>
+
+      </ion-list>
+
+      <!-- <ion-item>
+          <ion-thumbnail slot="start">
+            <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+          </ion-thumbnail>
+          <ion-label>Asignatura 1</ion-label>
+          <ion-label slot="end">2</ion-label>
+        </ion-item> -->
+    </ion-card-content>
+  </ion-card>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button [routerLink]="['/tabs/add-assists']">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
