--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -7,7 +7,7 @@
 
   <ion-card class="ion-text-center">
     <ion-card-header>
-      <ion-card-title class="headerCard">Bienvenido</ion-card-title>
+      <ion-card-title class="headerCard">Bienvenido <br> {{user.nombre}} </ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <qrcode 
