--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -2,7 +2,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Krub:wght@600&family=Nunito:ital,wght@0,300;1,400&display=swap"
   rel="stylesheet">
-<ion-tabs>
+<ion-tabs [style.visibility]="content_visibility">
   <ion-tab-bar slot="bottom" class="tab">
     <ion-tab-button tab="home">
       <ion-icon name="home"></ion-icon>
@@ -12,11 +12,6 @@
     <ion-tab-button tab="assists">
       <ion-icon name="library"></ion-icon>
       <ion-label>Asistencia</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="profile">
-      <ion-icon name="person"></ion-icon>
-      <ion-label>Perfil</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
