--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -7,26 +7,29 @@
 
   <ion-card class="ion-text-center">
     <ion-card-header>
-      <ion-card-title class="headerCard">Bienvenido</ion-card-title>
+      <ion-card-title class="headerCard">Bienvenido <br> {{user.name}} </ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <qrcode 
-        [qrdata]="qrCodeString"
-        [width]="256" 
-        [errorCorrectionLevel]="'M'">
+      <qrcode [qrdata]="qrCodeString" [width]="256" [errorCorrectionLevel]="'M'">
       </qrcode>
+      <ion-row>
+        <ion-col>
+          <ion-button expand="block" class="ion-margin btn btnIon" (click)="startScan()">Escanear qr</ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-button class="btn btnIon" (click)="logout()">Cerrar Sesión</ion-button>
+        </ion-col>
+      </ion-row>
     </ion-card-content>
   </ion-card>
 
-  <ion-button 
-    expand="block" 
-    class="ion-margin btn btnIon" 
-    (click)="startScan()">
-    Escanear qr
-  </ion-button>
+
+
 
   <ion-item *ngIf="scannedResult">
     <ion-label class="ion-text-wrap">Scanned Result: {{scannedResult}}</ion-label>
   </ion-item>
-  
+
 </ion-content>
