--- a/src/app/pages/edit-assists/edit-assists.page.html
+++ b/src/app/pages/edit-assists/edit-assists.page.html
@@ -7,7 +7,7 @@
 <ion-content>
   <ion-card class="card">
     <ion-card-header>
-      <ion-title class="headerCard">Añadir Asignatura</ion-title>
+      <ion-title class="headerCard">Modificar Asignatura</ion-title>
     </ion-card-header>
     <ion-card-content>
       <ion-item lines="full" class="inputItem">
