--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,9 +1,5 @@
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Krub:wght@600&family=Nunito:ital,wght@0,300;1,400&display=swap"
-  rel="stylesheet">
 <ion-tabs [style.visibility]="content_visibility">
-  <ion-tab-bar slot="bottom" class="tab">
+  <ion-tab-bar slot="bottom" id="tab">
     <ion-tab-button tab="home">
       <ion-icon name="home"></ion-icon>
       <ion-label>Inicio</ion-label>
