--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,5 +1,8 @@
 $html-font-size: 16px;
-$rojo: #FA4753;
+$primary: #FFB800;
+$secondary: #012C56;
+$secondary-dark: #00203f;
+$background: #17181C;
 
 @function stripUnit($value) {
     @return $value / ($value * 0 + 1);
@@ -9,97 +12,118 @@ $rojo: #FA4753;
 }
 
 *{
-    font-family: 'Krub', sans-serif;
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Merriweather', serif;
 }
 
+
+ion-content {
+    --padding-top: 20px;
+    --padding-bottom: 20px;
+    --padding-end: 20px;
+    --padding-start: 20px;
+    // --background: linear-gradient(to top left, #6b000b, #4e204d);
+    --background: url(../../../assets/img/background.jpeg);
+    
+}
+
+ion-item {
+    --padding-bottom: 10px;
+}
 ion-toolbar {
-  --background: #17181C;
-  display: flex;
-  text-align: center;
+    --background: #00203f;
+    display: flex;
+    text-align: center;
 }
 
-ion-back-button {
-  --color: #FA4753;
-  position: absolute;
+ion-title {
+    font-weight: bold;
+    color: #fff;
 }
 
 span {
-  color: $rojo;
+    color: $primary;
+    font-weight: bold;
 }
 
-ion-content {
-  --padding-top: 20px;
-  --padding-bottom: 20px;
-  --padding-end: 20px;
-  --padding-start: 20px;
-  --background: linear-gradient(to top left, #6b000b, #4e204d);
-  
-}
-
-
-
-.justify-center {
-  display: flex;
-  justify-content: center;
+ion-card-header {
+    --background: #00203f;
 }
 
 .card {
-  --background: #17181C; // Color Background Card
-  box-shadow: 0 0 .6rem #17181C; // Color Sombra
-  border-radius: 1.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+    --background: #00203f; // Color Background Card
+    box-shadow: 0 0 .6rem #17181C; // Color Sombra
+    border-radius: 1.5rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.headerCard.ios {
+    margin: 1rem 1rem;
+    width: 90%;
+    height: 4.5rem;
+    position: absolute;
 }
 
 .headerCard {
 
-  font-size: 1.3rem;
-  font-weight: 800;
-  color: #fff;
-  background-color: #17181C; // Color Titulo
-  border-radius: 1rem;
-  padding: .5rem;
-  text-align: center;
-  //border: .2rem solid #fff; // Color Borde Boton
-  border-bottom: .3rem solid #fff;
+    font-size: 1.3rem;
+    font-weight: 800;
+    color: $primary;
+    background-color: $secondary-dark; // Color Titulo
+    border-radius: 1rem;
+    padding: .5rem;
+    text-align: center;
+    //border: .2rem solid #fff; // Color Borde Boton
+    border-bottom: .3rem solid #fff;
 }
 
-.imgQr {
-  width: 40%;
-  height: 40%;
-  display: block;
 
+
+.inputItem {
+    margin: 2rem 0;
+    --background:transparent;
+}
+.inputItem.ios {
+    top: 2.5rem;
+    margin-top: 2rem;
+    --background:transparent;
 }
 
+/************ BOTONES ************/
 .btn {
-  margin-top: 3rem;
-  height: 3rem;
-  display: flex;
-  flex-direction: column;
-  border-radius: 4px;
-  text-transform: uppercase;
-  background-color: #17181C; // Color Background Boton
-  color: #fff;
-  transition: all 500ms ease;
-  border: 2px solid $rojo; // Color Borde Boton
-  z-index: 0;
-  font-weight: 600;
-  cursor: pointer;
+    margin-top: 2rem;
+    height: 3rem;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    text-transform: uppercase;
+    background-color: $primary; // Color Background Boton
+    color: $secondary-dark; // Color Texto Boton
+    transition: all 500ms ease;
+    border: 1.5px solid #17181C; // Color Borde Boton
+    z-index: 0;
+    font-weight: bold;
+    cursor: pointer;
+
 }
 
 .btn.ios {
-  margin-top: 1.5rem;
+    margin-top: 1.5rem;
 }
 
 .btnIon, .btnIon:host{
-  width: auto;
-  height: 3rem;
-  font-size: .7rem;
-  font-weight: 300;
-  --background: transparent;
-  --background-hover: transparent;
-  margin-bottom: 0;
-  margin-top: 0;
+    width: auto;
+    height: 3rem;
+    font-size: .7rem;
+    font-weight: bold;
+    --background: transparent;
+    --background-hover: transparent;
+    margin-bottom: 0;
+    margin-top: 0;
 }
+
+
+
+
+/************ END BOTONES ************/
+
