--- a/src/app/pages/resetpassword/resetpassword.page.html
+++ b/src/app/pages/resetpassword/resetpassword.page.html
@@ -4,7 +4,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/login"></ion-back-button>
+      <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
     <ion-title>Registr<span>App</span></ion-title>
   </ion-toolbar>
