--- a/src/app/pages/assists/assists.page.html
+++ b/src/app/pages/assists/assists.page.html
@@ -17,11 +17,11 @@
             <ion-col>
               <ion-label>{{c.name}}</ion-label>
             </ion-col>
-            <ion-fab-button (click)="editar(c)">
+            <ion-fab-button (click)="edit(c)">
               <ion-icon name="pencil"></ion-icon>
             </ion-fab-button>
   
-            <ion-fab-button (click)="eliminar(c)">
+            <ion-fab-button (click)="delete(c)">
               <ion-icon name="trash"></ion-icon>
             </ion-fab-button>
           </ion-row>
