--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -16,25 +16,16 @@
         <ion-col>
           <ion-button expand="block" class="ion-margin btn btnIon" (click)="startScan()">Escanear qr</ion-button>
         </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col>
-          <ion-button expand="block" class="btn btnIon" (click)="logout()">Cerrar Sesión</ion-button>
+        <ion-col *ngIf="scanning">
+          <ion-button expand="block" class="ion-margin btn btnIon" (click)="stopScan()">Detener Escaneo</ion-button>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-button expand="block" class="btn btnIon" [routerLink]="['/asdsadsa']" >404</ion-button>
+          <ion-button expand="block" class="ion-margin btn btnIon" (click)="logout()">Cerrar Sesión</ion-button>
         </ion-col>
       </ion-row>
     </ion-card-content>
   </ion-card>
-
-
-
-
-  <ion-item *ngIf="scannedResult">
-    <ion-label class="ion-text-wrap">Scanned Result: {{scannedResult}}</ion-label>
-  </ion-item>
 
 </ion-content>
