--- a/src/app/pages/not-found/not-found.page.html
+++ b/src/app/pages/not-found/not-found.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>not-found</ion-title>
+    <ion-title>Error 404</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -11,6 +11,8 @@
     </ion-card-header>
     <ion-card-content>
       <p>Page not found</p>
+
+      <img src="../../../assets/img/notfound.jpeg" alt="">
     </ion-card-content>
   </ion-card>
 </ion-content>
