--- a/src/app/pages/assists/assists.page.html
+++ b/src/app/pages/assists/assists.page.html
@@ -15,18 +15,17 @@
         <ion-item *ngFor="let c of courses">
           <ion-row>
             <ion-col>
-              <ion-label>{{c.name}}</ion-label>
+              <ion-label>Asignatura: {{c.name}}</ion-label>
+              <ion-label>Asistencia: {{c.assists}}</ion-label>
+
             </ion-col>
             <ion-fab-button (click)="edit(c)">
               <ion-icon name="pencil"></ion-icon>
             </ion-fab-button>
-  
+
             <ion-fab-button (click)="delete(c)">
               <ion-icon name="trash"></ion-icon>
             </ion-fab-button>
-          </ion-row>
-          <ion-row>
-            <ion-label>Asistencia: {{c.assists}}</ion-label>
           </ion-row>
         </ion-item>
 
