--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -6,7 +6,7 @@
 <ion-content>
   <ion-card class="card">
     <ion-card-header>
-      <ion-title class="headerCard">Iniciar Sesion</ion-title>
+      <ion-title class="headerCard">Iniciar Sesión</ion-title>
     </ion-card-header>
     <ion-card-content>
       <ion-item lines="full" class="inputItem">
@@ -17,22 +17,20 @@
       <ion-item lines="full" class="inputItem">
         
         <ion-label position="floating">Contraseña</ion-label>
-        <ion-input type="password" [(ngModel)]="password" minlength="4" maxlength="20"></ion-input>
+        <ion-input type="password" inputmode="numeric" [(ngModel)]="password" minlength="4" maxlength="20"></ion-input>
       </ion-item>
+      <ion-row>
+        <ion-col>
+          <ion-button class="btn btnIon" (click)="login()">Ingresar</ion-button>
+        </ion-col>
+      </ion-row>
       <ion-row>
         <ion-col>
           <ion-button class="btn btnIon" (click)="resetPassword()">Reestablecer Contraseña
           </ion-button>
         </ion-col>
       </ion-row>
-      <ion-row>
-        <ion-col>
-          <ion-button class="btn btnIon" (click)="login()">Ingresar</ion-button>
-        </ion-col>
-      </ion-row>
     </ion-card-content>
   </ion-card>
 </ion-content>
-
-
 
