--- a/src/app/pages/assists/assists.page.html
+++ b/src/app/pages/assists/assists.page.html
@@ -41,10 +41,11 @@
         </ion-item> -->
     </ion-card-content>
   </ion-card>
-
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  
+  <!--<ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button [routerLink]="['/tabs/add-assists']">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
-  </ion-fab>
+  </ion-fab> -->
+  
 </ion-content>
